Fixed spacing in sidebar

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -5,6 +5,7 @@
 .sidebar-btn {
   width: 100%;
   padding: 10px;
+  margin: 1em 0 0;
 }
 
 #sidebar {
